# sdl-sample

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.fullbuild  README  main.cpp
include/core/: core.hpp  window_manager.hpp
include/graphic/: abstract_sprite.hpp  frame_rate_counter.hpp  sprite.hpp  sprites_loader.hpp  test_sprite.hpp  texture.hpp  textures_loader.hpp  type.hpp  window_manager.hpp
include/util/: SDLTestConfig.h.in  timer.hpp
include/world/: entity.hpp  scene.hpp
src/core/: core.cpp  window_manager.cpp
src/graphic/: abstract_sprite.cpp  frame_rate_counter.cpp  sprite.cpp  sprites_loader.cpp  test_sprite.cpp  texture.cpp  textures_loader.cpp  window_manager.cpp
src/util/: timer.cpp
src/world/: entity.cpp
